[gd_scene load_steps=2 format=3 uid="uid://0hx0wuw1wgpb"]

[ext_resource type="Script" path="res://Models/Menus/inventory_skill_panel.gd" id="1_p4bdc"]

[node name="Skills" type="VBoxContainer" node_paths=PackedStringArray("list", "count", "nametag", "desc_box_container", "target_selector")]
size_flags_horizontal = 3
focus_mode = 2
script = ExtResource("1_p4bdc")
list = NodePath("HBoxContainer/VBoxContainer/Items/List")
count = NodePath("HBoxContainer/VBoxContainer/Items/Count")
nametag = NodePath("Player")
desc_box_container = NodePath("")
target_selector = NodePath("")

[node name="Player" type="Label" parent="."]
layout_mode = 2
text = "Player"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0

[node name="Heading" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Heading"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Heading/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Heading/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skill"
vertical_alignment = 1
justification_flags = 162

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/Heading/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Cost"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/Heading/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Price"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="Items" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="List" type="ItemList" parent="HBoxContainer/VBoxContainer/Items"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.0
auto_height = true
item_count = 3
item_0/text = "Leaf"
item_1/text = "Razor"
item_2/text = "Excalihuh?"

[node name="Count" type="ItemList" parent="HBoxContainer/VBoxContainer/Items"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
item_count = 3
fixed_column_width = 70
item_0/text = "1"
item_1/text = "1"
item_2/text = "1"

[node name="Cost" type="ItemList" parent="HBoxContainer/VBoxContainer/Items"]
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
item_0/text = "10"
item_1/text = "10"
item_2/text = "420"

[connection signal="item_activated" from="HBoxContainer/VBoxContainer/Items/List" to="." method="_on_item_activated"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/Items/List" to="." method="_on_item_selected"]
[connection signal="item_activated" from="HBoxContainer/VBoxContainer/Items/Count" to="." method="_on_item_activated"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/Items/Count" to="." method="_on_item_selected"]
[connection signal="item_activated" from="HBoxContainer/VBoxContainer/Items/Cost" to="." method="_on_item_activated"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/Items/Cost" to="." method="_on_item_selected"]
